--- a/boards/sama5d29_curiosity.yml
+++ b/boards/sama5d29_curiosity.yml
@@ -38,8 +38,8 @@ interfaces:
             function: GPIO
             direction: out
             latch: low
-      - name: User Button
-        description: User Button
+      - name: Switch
+        description: Switch
         pinctrl:
           gpio:
             pinId: PA17
@@ -546,123 +546,123 @@ interfaces:
 
 connectors:
   - compatible: mikrobus
-    name: MikroBUS Header 1
-    description: MikroBUS Standard Extension Header 1
+    name: mikroBUS Header 1
+    description: mikroBUS Standard Extension Header 1
     pinctrl:
       an:
         pinId: PD25
-        name: MikroBUS1_AN
+        name: mikroBUS1_AN
         function: ADC_AD6
       rst:
         pinId: PA16
-        name: MikroBUS1_RST
+        name: mikroBUS1_RST
         function: GPIO
         direction: out
         latch: low
       spi:
         cs:
           pinId: PC4
-          name: MikroBUS1_SPI_CS
+          name: mikroBUS1_SPI_CS
           function: SPI1_NPCS0
         sck:
           pinId: PC1
-          name: MikroBUS1_SPI_SCK
+          name: mikroBUS1_SPI_SCK
           function: SPI1_SPCK
         miso:
           pinId: PC3
-          name: MikroBUS1_SPI_MISO
+          name: mikroBUS1_SPI_MISO
           function: SPI1_MISO
         mosi:
           pinId: PC2
-          name: MikroBUS1_SPI_MOSI
+          name: mikroBUS1_SPI_MOSI
           function: SPI1_MOSI
       pwm:
         pinId: PA31
-        name: MikroBUS1_PWM
+        name: mikroBUS1_PWM
         function: PWM_PWML0
       int:
         pinId: PB2
-        name: MikroBUS1_INT
+        name: mikroBUS1_INT
         function: GPIO
         direction: out
         pull up: True
       uart:
         tx:
           pinId: PB4
-          name: MikroBUS1_UART_TX
+          name: mikroBUS1_UART_TX
           function: UART4_UTXD4
         rx:
           pinId: PB3
-          name: MikroBUS1_UART_RX
+          name: mikroBUS1_UART_RX
           function: UART4_URXD4
       i2c:
         sda:
           pinId: PD4
-          name: MikroBUS1_I2C_SDA
+          name: mikroBUS1_I2C_SDA
           function: TWIHS1_TWD1
         scl:
           pinId: PD5
-          name: MikroBUS1_I2C_SCL
+          name: mikroBUS1_I2C_SCL
           function: TWIHS1_TWCK1
 
   - compatible: mikrobus
-    name: MikroBUS Header 2
-    description: MikroBUS Standard Extension Header 2
+    name: mikroBUS Header 2
+    description: mikroBUS Standard Extension Header 2
     pinctrl:
       an:
         pinId: PD26
-        name: MikroBUS2_AN
+        name: mikroBUS2_AN
         function: ADC_AD7
       rst:
         pinId: PA16
-        name: MikroBUS2_RST
+        name: mikroBUS2_RST
         function: GPIO
         direction: out
         latch: low
       spi:
         cs:
           pinId: PC5
-          name: MikroBUS2_SPI_CS
+          name: mikroBUS2_SPI_CS
           function: SPI1_NPCS1
         sck:
           pinId: PC1
-          name: MikroBUS2_SPI_SCK
+          name: mikroBUS2_SPI_SCK
           function: SPI1_SPCK
         miso:
           pinId: PC3
-          name: MikroBUS2_SPI_MISO
+          name: mikroBUS2_SPI_MISO
           function: SPI1_MISO
         mosi:
           pinId: PC2
-          name: MikroBUS2_SPI_MOSI
+          name: mikroBUS2_SPI_MOSI
           function: SPI1_MOSI
       pwm:
         pinId: PB0
-        name: MikroBUS2_PWM
+        name: mikroBUS2_PWM
         function: PWM_PWMH1
       int:
         pinId: PB1
-        name: MikroBUS2_INT
+        name: mikroBUS2_INT
         function: GPIO
         direction: out
         pull up: True
       uart:
         tx:
           pinId: PB12
-          name: MikroBUS2_UART_TX
+          name: mikroBUS2_UART_TX
           function: UART3_UTXD3
         rx:
           pinId: PB11
-          name: MikroBUS2_UART_RX
+          name: mikroBUS2_UART_RX
           function: UART3_URXD3
       i2c:
         sda:
           pinId: PD4
-          name: MikroBUS2_I2C_SDA
+          name: mikroBUS2_I2C_SDA
           function: TWIHS1_TWD1
         scl:
           pinId: PD5
-          name: MikroBUS2_I2C_SCL
+          name: mikroBUS2_I2C_SCL
           function: TWIHS1_TWCK1
 
   - compatible: rmii
