--- a/boards/pic32cxmtsh_db.yml
+++ b/boards/pic32cxmtsh_db.yml
@@ -369,43 +369,43 @@ connectors:
           function: FLEXCOM1_IO0
 
   - compatible: mikrobus
-    name: MikroBUS
-    description: MikroBUS Standard Extension Header J21
+    name: mikroBUS
+    description: mikroBUS Standard Extension Header J21
     pinctrl:
       an:
         pinId: PA31
-        name: MikroBUS_AN
+        name: mikroBUS_AN
         function: ADC_AD2/ACC_INP2
       rst:
         pinId: PB26
-        name: MikroBUS_RST
+        name: mikroBUS_RST
         function: GPIO
         direction: out
         latch: low
       spi:
         cs:
           pinId: PC6
-          name: MikroBUS_SPI_CS
+          name: mikroBUS_SPI_CS
           function: FLEXCOM5_IO3
         sck:
           pinId: PC7
-          name: MikroBUS_SPI_SCK
+          name: mikroBUS_SPI_SCK
           function: FLEXCOM5_IO2
         miso:
           pinId: PC8
-          name: MikroBUS_SPI_MISO
+          name: mikroBUS_SPI_MISO
           function: FLEXCOM5_IO1
         mosi:
           pinId: PC9
-          name: MikroBUS_SPI_MOSI
+          name: mikroBUS_SPI_MOSI
           function: FLEXCOM5_IO0
       pwm:
         pinId: PD16
-        name: MikroBUS_PWM
+        name: mikroBUS_PWM
         function: PWM_PWMH2
       int:
         pinId: PB25
-        name: MikroBUS_INT
+        name: mikroBUS_INT
         function: GPIO
         direction: in
         pull down: True
@@ -413,18 +413,18 @@ connectors:
       uart:
         tx:
           pinId: PC16
-          name: MikroBUS_UART_TX
+          name: mikroBUS_UART_TX
           function: FLEXCOM6_IO0
         rx:
           pinId: PC17
-          name: MikroBUS_UART_RX
+          name: mikroBUS_UART_RX
           function: FLEXCOM6_IO1
       i2c:
         sda:
           pinId: PC21
-          name: MikroBUS_I2C_SDA
+          name: mikroBUS_I2C_SDA
           function: FLEXCOM7_IO0
         scl:
           pinId: PC20
-          name: MikroBUS_I2C_SCL
+          name: mikroBUS_I2C_SCL
           function: FLEXCOM7_IO1
