--- a/boards/pic32mz_da_curiosity.yml
+++ b/boards/pic32mz_da_curiosity.yml
@@ -11,7 +11,7 @@ interfaces:
   - name: Digital interface
     description: Button and Led configurations
     options:
-      - name: User Led 1
+      - name: Led 1
         description: Red Led (RC1) - active low
         pinctrl:
           gpio:
@@ -20,7 +20,7 @@ interfaces:
             function: GPIO
             direction: out
             latch: high
-      - name: User Led 2
+      - name: Led 2
         description: Green Led (RC4) - active low
         pinctrl:
           gpio:
@@ -29,7 +29,7 @@ interfaces:
             function: GPIO
             direction: out
             latch: high
-      - name: User Led 3
+      - name: Led 3
         description: Blue Led (RB1) - active low
         pinctrl:
           gpio:
@@ -38,8 +38,8 @@ interfaces:
             function: GPIO
             direction: out
             latch: high
-      - name: User Button 1
-        description: User Button 1 (RB11)
+      - name: Switch 1
+        description: Switch 1 (RB11)
         pinctrl:
           gpio:
             pinId: RB11
@@ -48,8 +48,8 @@ interfaces:
             direction: in
             pull up: True
             change notification: True
-      - name: User Button 2
-        description: User Button 2 (RG15)
+      - name: Switch 2
+        description: Switch 2 (RG15)
         pinctrl:
           gpio:
             pinId: RG15
@@ -58,8 +58,8 @@ interfaces:
             direction: in
             pull up: True
             change notification: True
-      - name: User Button 3
-        description: User Button 3 (RH12)
+      - name: Switch 3
+        description: Switch 3 (RH12)
         pinctrl:
           gpio:
             pinId: RH12
@@ -68,8 +68,8 @@ interfaces:
             direction: in
             pull up: True
             change notification: True
-      - name: User Button 4
-        description: User Button 4 (RB13)
+      - name: Switch 4
+        description: Switch 4 (RB13)
         pinctrl:
           gpio:
             pinId: RB13
@@ -652,102 +652,102 @@ interfaces:
 
 connectors:
   - compatible: mikrobus
-    name: MikroBUS Header 1
-    description: MikroBUS Standard Extension Header 1
+    name: mikroBUS Header 1
+    description: mikroBUS Standard Extension Header 1
     pinctrl:
       an:
         pinId: RD15
-        name: MikroBUS1_AN
+        name: mikroBUS1_AN
         function: ADCHS_AN33
       rst:
         pinId: RH6
-        name: MikroBUS1_RST
+        name: mikroBUS1_RST
         function: GPIO
         direction: out
         latch: low
       spi:
         cs:
           pinId: RB0
-          name: MikroBUS1_SPI_CS
+          name: mikroBUS1_SPI_CS
           function: SPI1_SS1 (out)
         sck:
           pinId: RD1
-          name: MikroBUS1_SPI_SCK
+          name: mikroBUS1_SPI_SCK
           function: SPI1_SCK1
         miso:
           pinId: RB5
-          name: MikroBUS1_SPI_MISO
+          name: mikroBUS1_SPI_MISO
           function: SPI1_SDI1
         mosi:
           pinId: RB10
-          name: MikroBUS1_SPI_MOSI
+          name: mikroBUS1_SPI_MOSI
           function: SPI1_SDO1
       pwm:
         pinId: RB3
-        name: MikroBUS1_PWM
+        name: mikroBUS1_PWM
         function: OCMP4_OC4
       int:
         pinId: RC3
-        name: MikroBUS1_INT
+        name: mikroBUS1_INT
         function: INT_INT2
       uart:
         tx:
           pinId: RE5
-          name: MikroBUS1_UART_TX
+          name: mikroBUS1_UART_TX
           function: UART1_U1TX
         rx:
           pinId: RB9
-          name: MikroBUS1_UART_RX
+          name: mikroBUS1_UART_RX
           function: UART1_U1RX
       i2c:
         sda:
           pinId: RA15
-          name: MikroBUS1_I2C_SDA
+          name: mikroBUS1_I2C_SDA
           function: I2C1_SDA1
         scl:
           pinId: RA14
-          name: MikroBUS1_I2C_SCL
+          name: mikroBUS1_I2C_SCL
           function: I2C1_SCL1
 
   - compatible: mikrobus
-    name: MikroBUS Header 2
-    description: MikroBUS Standard Extension Header 2
+    name: mikroBUS Header 2
+    description: mikroBUS Standard Extension Header 2
     pinctrl:
       an:
         pinId: RK2
-        name: MikroBUS2_AN
+        name: mikroBUS2_AN
         function: ADCHS_AN11
       rst:
         pinId: RH0
-        name: MikroBUS2_RST
+        name: mikroBUS2_RST
         function: GPIO
         direction: out
         latch: low
       spi:
         cs:
           pinId: RE3
-          name: MikroBUS2_SPI_CS
+          name: mikroBUS2_SPI_CS
           function: SPI3_SS3 (out)
         sck:
           pinId: RB14
-          name: MikroBUS2_SPI_SCK
+          name: mikroBUS2_SPI_SCK
           function: SPI3_SCK3
         miso:
           pinId: RC14
-          name: MikroBUS2_SPI_MISO
+          name: mikroBUS2_SPI_MISO
           function: SPI3_SDI3
         mosi:
           pinId: RD14
-          name: MikroBUS2_SPI_MOSI
+          name: mikroBUS2_SPI_MOSI
           function: SPI3_SDO3
       pwm:
         pinId: RA1
-        name: MikroBUS2_PWM
+        name: mikroBUS2_PWM
         function: GPIO
         direction: out
       int:
         pinId: RH3
-        name: MikroBUS2_INT
+        name: mikroBUS2_INT
         function: GPIO
         direction: in
         pull up: True
@@ -755,20 +755,20 @@ connectors:
       uart:
         tx:
           pinId: RG8
-          name: MikroBUS2_UART_TX
+          name: mikroBUS2_UART_TX
           function: UART3_U3TX
         rx:
           pinId: RG7
-          name: MikroBUS2_UART_RX
+          name: mikroBUS2_UART_RX
           function: UART3_U3RX
       i2c:
         sda:
           pinId: RA15
-          name: MikroBUS2_I2C_SDA
+          name: mikroBUS2_I2C_SDA
           function: I2C1_SDA1
         scl:
           pinId: RA14
-          name: MikroBUS2_I2C_SCL
+          name: mikroBUS2_I2C_SCL
           function: I2C1_SCL1
 
   - compatible: xplainpro
