--- a/boards/samda1_xplained_pro.yml
+++ b/boards/samda1_xplained_pro.yml
@@ -20,8 +20,8 @@ interfaces:
             function: GPIO
             direction: out
             latch: high
-      - name: User Button 0
-        description: User Button 0 (PA15)
+      - name: Switch 0
+        description: Switch 0 (PA15)
         pinctrl:
           gpio:
             pinId: PA15
