--- a/boards/same54_xplained_pro.yml
+++ b/boards/same54_xplained_pro.yml
@@ -11,7 +11,7 @@ interfaces:
   - name: Digital interface
     description: Button and Led configurations
     options:
-      - name: User Led
+      - name: Led
         description: Yellow Led (PC18) - latch high
         pinctrl:
           gpio:
@@ -20,8 +20,8 @@ interfaces:
             function: GPIO
             direction: out
             latch: high
-      - name: User Button
-        description: User Button 0 (PB31)
+      - name: Switch
+        description: Switch 0 (PB31)
         pinctrl:
           gpio:
             pinId: PB31
