--- a/boards/samg55_xplained_pro.yml
+++ b/boards/samg55_xplained_pro.yml
@@ -20,8 +20,8 @@ interfaces:
             function: GPIO
             direction: out
             latch: high
-      - name: User Button 1
-        description: User Button 1 (PA2) - raising edge
+      - name: Switch 1
+        description: Switch 1 (PA2) - raising edge
         pinctrl:
           gpio:
             pinId: PA2
