--- a/boards/wfi32e04_hpc_20_curiosity.yml
+++ b/boards/wfi32e04_hpc_20_curiosity.yml
@@ -30,8 +30,8 @@ interfaces:
             function: GPIO
             direction: out
             latch: low
-      - name: User Button 1
-        description: User Button (RA10) - SW300 - Ensure J211 jumper is mounted on pins 1-2
+      - name: Switch 1
+        description: Switch (RA10) - SW300 - Ensure J211 jumper is mounted on pins 1-2
         pinctrl:
           gpio:
             pinId: RA10
@@ -39,8 +39,8 @@ interfaces:
             function: GPIO
             direction: in
             pull up: True
-      - name: User Button 2
-        description: User Button (RB8) - SW302 - Ensure J211 jumper is mounted on pins 1-2
+      - name: Switch 2
+        description: Switch (RB8) - SW302 - Ensure J211 jumper is mounted on pins 1-2
         pinctrl:
           gpio:
             pinId: RB8
@@ -115,119 +115,119 @@ interfaces:
             
 connectors:
   - compatible: mikrobus
-    name: MikroBUS Header 1
-    description: MikroBUS header configuration - J400
+    name: mikroBUS Header 1
+    description: mikroBUS header configuration - J400
     pinctrl:
       an:
         pinId: RA14
-        name: MikroBUS_AN
+        name: mikroBUS_AN
         function: ADCHS_AN14
       rst:
         pinId: RB6
-        name: MikroBUS_RST
+        name: mikroBUS_RST
         function: GPIO
         direction: out
         latch: low
       spi:
         cs:
           pinId: RB7
-          name: MikroBUS_SPI_CS
+          name: mikroBUS_SPI_CS
           function: SPI2_SS2 (out)
         sck:
           pinId: RA11
-          name: MikroBUS_SPI_SCK
+          name: mikroBUS_SPI_SCK
           function: SPI2_SCK2
         miso:
           pinId: RK5
-          name: MikroBUS_SPI_MISO
+          name: mikroBUS_SPI_MISO
           function: SPI2_SDI2
         mosi:
           pinId: RK4
-          name: MikroBUS_SPI_MOSI
+          name: mikroBUS_SPI_MOSI
           function: SPI2_SDO2
       pwm:
         pinId: RB12
-        name: MikroBUS_PWM
+        name: mikroBUS_PWM
         function: OCMP1_OC1
       int:
         pinId: RK6
-        name: MikroBUS_INT
+        name: mikroBUS_INT
         function: INT_INT2
       uart:
         tx:
           pinId: RK7
-          name: MikroBUS_UART_TX
+          name: mikroBUS_UART_TX
           function: UART2_U2TX
         rx:
           pinId: RB9
-          name: MikroBUS_UART_RX
+          name: mikroBUS_UART_RX
           function: UART2_U2RX
       i2c:
         sda:
           pinId: RA5
-          name: MikroBUS_I2C_SDA
+          name: mikroBUS_I2C_SDA
           function: I2C1_SDA1
         scl:
           pinId: RA4
-          name: MikroBUS_I2C_SCL
+          name: mikroBUS_I2C_SCL
           function: I2C1_SCL1
 
   - compatible: mikrobus
-    name: MikroBUS Header 2
-    description: MikroBUS header configuration - J404
+    name: mikroBUS Header 2
+    description: mikroBUS header configuration - J404
     pinctrl:
       an:
         pinId: RB0
-        name: MikroBUS2_AN
+        name: mikroBUS2_AN
         function: ADCHS_AN0
       rst:
         pinId: RB6
-        name: MikroBUS_RST
+        name: mikroBUS_RST
         function: GPIO
         direction: out
         latch: low
       spi:
         cs:
           pinId: RB10
-          name: MikroBUS2_SPI_CS
+          name: mikroBUS2_SPI_CS
           function: SPI1_SS1 (out)
         sck:
           pinId: RC6
-          name: MikroBUS2_SPI_SCK
+          name: mikroBUS2_SPI_SCK
           function: SPI1_SCK1
         miso:
           pinId: RC7
-          name: MikroBUS2_SPI_MISO
+          name: mikroBUS2_SPI_MISO
           function: SPI1_SDI1
         mosi:
           pinId: RC8
-          name: MikroBUS2_SPI_MOSI
+          name: mikroBUS2_SPI_MOSI
           function: SPI1_SDO1
       pwm:
         pinId: RB12
-        name: MikroBUS_PWM
+        name: mikroBUS_PWM
         function: OCMP1_OC1
       int:
         pinId: RA13
-        name: MikroBUS_INT
+        name: mikroBUS_INT
         function: INT_INT3
       uart:
         tx:
           pinId: RK9
-          name: MikroBUS2_UART_TX
+          name: mikroBUS2_UART_TX
           function: UART3_U3TX
         rx:
           pinId: RA12
-          name: MikroBUS2_UART_RX
+          name: mikroBUS2_UART_RX
           function: UART3_U3RX
       i2c:
         sda:
           pinId: RA3
-          name: MikroBUS2_I2C_SDA
+          name: mikroBUS2_I2C_SDA
           function: I2C2_SDA2
         scl:
           pinId: RA2
-          name: MikroBUS2_I2C_SCL
+          name: mikroBUS2_I2C_SCL
           function: I2C2_SCL2
 
   - compatible: rmii
